--- a/public/ws_test.html
+++ b/public/ws_test.html
@@ -10,8 +10,9 @@
     .added { color: green; }
     .modified { color: orange; }
     .deleted { color: red; }
-    #log div { margin-bottom: 0.5em; }
+    #log div { margin-bottom: 0.5em; border-bottom: 1px solid #ddd; padding-bottom: 5px; }
     code { background: #f0f0f0; padding: 2px 6px; border-radius: 3px; }
+    .resource-info { margin-left: 10px; font-size: 0.9em; color: #555; }
   </style>
 </head>
 <body>
@@ -61,13 +62,34 @@ function startWebSocket() {
       const div = document.createElement("div");
       div.classList.add(data.type.toLowerCase());
 
-      div.innerHTML = `
+      // 顯示主要欄位
+      let html = `
         <strong>[${data.type}]</strong>
         <code>${data.kind}/${data.name}</code>
-        <div>Status: ${data.status || 'n/a'}</div>
-        <hr />
+        <div class="resource-info">Status: ${data.status || 'n/a'}</div>
       `;
-      document.getElementById("log").prepend(div);
+
+      // 如果是 Service 額外顯示 External IPs
+      if (data.kind === "Service") {
+        if (data.externalIPs && data.externalIPs.length > 0) {
+          html += `<div class="resource-info">External IPs: ${data.externalIPs.join(", ")}</div>`;
+        }
+        if (data.nodePorts && data.nodePorts.length > 0) {
+          html += `<div class="resource-info">NodePorts: ${data.nodePorts.join(", ")}</div>`;
+        }
+      }
+
+      div.innerHTML = html;
+
+      // 新訊息放頂端
+      const log = document.getElementById("log");
+      log.prepend(div);
+
+      // 限制訊息最多 100 筆，避免網頁越滾越慢
+      while (log.children.length > 100) {
+        log.removeChild(log.lastChild);
+      }
+
     } catch (e) {
       console.warn("Invalid message:", event.data);
     }
